decreased text of some of the paragraphs by a bit

--- a/src/index.html
+++ b/src/index.html
@@ -95,7 +95,7 @@
                             <div class="tile is-parent is-vertical">
                                 <article class="tile is-child notification is-primary">
                                     <p class="title has-text-white has-text-centered-mobile">Evening Talk</p>
-                                    <p class="subtitle has-text-white has-text-justified">Evening talks are short 2-3
+                                    <p class="subtitle has-text-white has-text-justified is-size-6">Evening talks are short 2-3
                                         hour talks where a
                                         small group of
                                         people get together in a local office and listen to some speakers present their
@@ -103,7 +103,7 @@
                                 </article>
                                 <article class="tile is-child notification is-primary">
                                     <p class="title has-text-white has-text-centered-mobile">Study Jam</p>
-                                    <p class="subtitle has-text-white has-text-justified">Study Jams are community-run
+                                    <p class="subtitle has-text-white has-text-justified is-size-6">Study Jams are community-run
                                         study groups for
                                         developers of all
                                         skill levels on topics such as Android, Google Cloud, TensorFlow, and other
@@ -116,7 +116,7 @@
                             <div class="tile is-parent">
                                 <article class="tile is-child notification is-primary">
                                     <p class="title has-text-white has-text-centered-mobile">DevFest</p>
-                                    <p class="subtitle has-text-white has-text-justified">GDG DevFests are large tech
+                                    <p class="subtitle has-text-white has-text-justified is-size-6">GDG DevFests are large tech
                                         conferences held in
                                         Glasgow. They
                                         are full of speakers and workshops all presented by the world's experts.
@@ -130,7 +130,7 @@
                         <div class="tile is-parent">
                             <article class="tile is-child notification is-primary">
                                 <div class="content">
-                                    <p class="title has-text-white has-text-centered-mobile">With many more planned!
+                                    <p class="title has-text-white has-text-centered-mobile is-size-4">With many more planned!
                                 </div>
                             </article>
                         </div>
