added author to meta tag

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
           content="GDG Glasgow is a group of developers aiming to manipulate technological advancements under Google's technological guidance. We do this in the form of events that encourage everyone to participate as well as being open and having a nurturing environment. Our goal is to organize space to connect the best industry experts with the city of Glasgow.">
     <meta property="og:site_name" content="GDG Glasgow">
     <meta property="og:locale" content="en_GB">
-    <meta property="article:author" content="">
+    <meta property="article:author" content="GDG Glasgow">
 
     <meta name="twitter:card" content="summary">
     <meta name="twitter:url" content="https://gdg-glasgow.com/">
@@ -32,7 +32,7 @@
 
     <meta name="description"
           content="GDG Glasgow is a group of developers aiming to manipulate technological advancements under Google's technological guidance. We do this in the form of events that encourage everyone to participate as well as being open and having a nurturing environment. Our goal is to organize space to connect the best industry experts with the city of Glasgow.">
-    <meta name="robots" content="index,follow"><!-- All Search Engines -->
+    <meta name="robots" content="index,follow">
     <meta name="google" content="nositelinkssearchbox">
     <meta name="subject" content="Technology and networking">
     <meta name="rating" content="General">
