updated bulma to version 0.7.1, with it came a color change from is-primary to is-link due to the primary now being turquoise instead of blue

--- a/src/index.html
+++ b/src/index.html
@@ -65,8 +65,8 @@
 
 <main class="has-background-dark">
 
-    <!--break lines are necessary because the fixed navbar pulls everything towards it and the text gets hidden-->
-    <br><br><br>
+    <!--a little space before the nav and the rest of the content-->
+    <br>
 
     <section class="hero is-dark">
         <div class="hero-body">
@@ -93,7 +93,7 @@
                     <div class="tile is-vertical is-12">
                         <div class="tile">
                             <div class="tile is-parent is-vertical">
-                                <article class="tile is-child notification is-primary">
+                                <article class="tile is-child notification is-link">
                                     <p class="title has-text-white has-text-centered-mobile">Evening Talk</p>
                                     <p class="subtitle has-text-white has-text-justified is-size-6">Evening talks are short 2-3
                                         hour talks where a
@@ -101,7 +101,7 @@
                                         people get together in a local office and listen to some speakers present their
                                         topics as well as network and enjoy light refreshments.</p>
                                 </article>
-                                <article class="tile is-child notification is-primary">
+                                <article class="tile is-child notification is-link">
                                     <p class="title has-text-white has-text-centered-mobile">Study Jam</p>
                                     <p class="subtitle has-text-white has-text-justified is-size-6">Study Jams are community-run
                                         study groups for
@@ -114,7 +114,7 @@
                                 </article>
                             </div>
                             <div class="tile is-parent">
-                                <article class="tile is-child notification is-primary">
+                                <article class="tile is-child notification is-link">
                                     <p class="title has-text-white has-text-centered-mobile">DevFest</p>
                                     <p class="subtitle has-text-white has-text-justified is-size-6">GDG DevFests are large tech
                                         conferences held in
@@ -128,7 +128,7 @@
                             </div>
                         </div>
                         <div class="tile is-parent">
-                            <article class="tile is-child notification is-primary">
+                            <article class="tile is-child notification is-link">
                                 <div class="content">
                                     <p class="title has-text-white has-text-centered-mobile is-size-4">With many more planned!
                                 </div>
@@ -148,13 +148,13 @@
                     <div class="tile is-vertical is-12">
                         <div class="tile">
                             <div class="tile is-parent is-vertical">
-                                <article class="tile is-child notification is-info has-background-primary">
+                                <article class="tile is-child notification is-info has-background-link">
                                     <h3 class="title has-text-centered-mobile">Past</h3>
                                     <div id="past-list"></div>
                                 </article>
                             </div>
                             <div class="tile is-parent">
-                                <article class="tile is-child notification has-background-primary">
+                                <article class="tile is-child notification has-background-link">
                                     <h3 class="title has-text-centered-mobile">Upcoming</h3>
                                     <div id="upcoming-list"></div>
                                 </article>
