did a code format

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,8 @@
     <meta name="rating" content="General">
     <meta name="format-detection" content="telephone=no">
     <link rel="shorcut icon" href="./assets/media/logo.png">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css"
+          integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <title>GDG Glasgow</title>
 </head>
 
@@ -95,7 +96,8 @@
                             <div class="tile is-parent is-vertical">
                                 <article class="tile is-child notification is-link">
                                     <p class="title has-text-white has-text-centered-mobile">Evening Talk</p>
-                                    <p class="subtitle has-text-white has-text-justified is-size-6">Evening talks are short 2-3
+                                    <p class="subtitle has-text-white has-text-justified is-size-6">Evening talks are
+                                        short 2-3
                                         hour talks where a
                                         small group of
                                         people get together in a local office and listen to some speakers present their
@@ -103,7 +105,8 @@
                                 </article>
                                 <article class="tile is-child notification is-link">
                                     <p class="title has-text-white has-text-centered-mobile">Study Jam</p>
-                                    <p class="subtitle has-text-white has-text-justified is-size-6">Study Jams are community-run
+                                    <p class="subtitle has-text-white has-text-justified is-size-6">Study Jams are
+                                        community-run
                                         study groups for
                                         developers of all
                                         skill levels on topics such as Android, Google Cloud, TensorFlow, and other
@@ -116,7 +119,8 @@
                             <div class="tile is-parent">
                                 <article class="tile is-child notification is-link">
                                     <p class="title has-text-white has-text-centered-mobile">DevFest</p>
-                                    <p class="subtitle has-text-white has-text-justified is-size-6">GDG DevFests are large tech
+                                    <p class="subtitle has-text-white has-text-justified is-size-6">GDG DevFests are
+                                        large tech
                                         conferences held in
                                         Glasgow. They
                                         are full of speakers and workshops all presented by the world's experts.
@@ -130,7 +134,8 @@
                         <div class="tile is-parent">
                             <article class="tile is-child notification is-link">
                                 <div class="content">
-                                    <p class="title has-text-white has-text-centered-mobile is-size-4">With many more planned!
+                                    <p class="title has-text-white has-text-centered-mobile is-size-4">With many more
+                                        planned!
                                 </div>
                             </article>
                         </div>
@@ -217,7 +222,11 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-121878737-1"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+
     gtag('js', new Date());
 
     gtag('config', 'UA-121878737-1');
