added a (somewhat) crude carousel like effect to the images

--- a/src/index.html
+++ b/src/index.html
@@ -125,9 +125,14 @@
                                         Glasgow. They
                                         are full of speakers and workshops all presented by the world's experts.
                                         Everyone is encouraged to attend. DevFests are usually one or two days long.</p>
-                                    <figure class="image is-4by3">
-                                        <img src="./assets/media/dev17.jpg">
-                                    </figure>
+                                    <div id="slider">
+                                        <figure class="image is-4by3">
+                                            <img src="./assets/media/dev17.jpg">
+                                        </figure>
+                                        <figure class="image is-4by3 is-hidden">
+                                            <img src="./assets/media/anight.jpg">
+                                        </figure>
+                                    </div>
                                 </article>
                             </div>
                         </div>
