Corrected typos / rewriting sentences

--- a/src/index.html
+++ b/src/index.html
@@ -74,13 +74,11 @@
             <div class="container">
                 <h1 class="title has-text-centered-mobile">What is GDG Glasgow?</h1>
                 <h3 class="subtitle has-text-justified">
-                    Google Developers Group (GDG) is an open and volunteer-run geek community that create exciting
-                    projects and share experience about Google technologies with a passion. GDG Glasgow is a group of
-                    developers aiming to manipulate technological advancements under Google's
-                    technological guidance. We do this in the form of events that encourage everyone to participate as
-                    well as being open and having a nurturing environment. Our goal is to organize space to connect the
-                    best industry experts
-                    with the city of Glasgow.
+                    Google Developers Group (GDG) is an open and volunteer-run geek community that passionately creates
+                    exciting projects and shares experience about Google's technologies. GDG Glasgow is a group of
+                    developers aiming to manipulate technological advancements under Google's technological guidance.
+                    We are encouraging everyone to participate in our events and provide an open and nurturing environment.
+                    Our goal is to organize space to connect the best industry experts with the city of Glasgow.
                 </h3>
             </div>
         </div>
@@ -100,19 +98,19 @@
                                         short 2-3
                                         hour talks where a
                                         small group of
-                                        people get together in a local office and listen to some speakers present their
-                                        topics as well as network and enjoy light refreshments.</p>
+                                        people get together in a local office, listen to some speakers present their
+                                        topics, network and enjoy light refreshments.</p>
                                 </article>
                                 <article class="tile is-child notification is-link">
                                     <p class="title has-text-white has-text-centered-mobile">Study Jam</p>
                                     <p class="subtitle has-text-white has-text-justified is-size-6">Study Jams are
                                         community-run
-                                        study groups for
+                                        study groups, for
                                         developers of all
-                                        skill levels on topics such as Android, Google Cloud, TensorFlow, and other
+                                        skill levels, on topics such as Android, Google Cloud, TensorFlow, and other
                                         Google technologies. The objective of these study groups is to raise the
                                         technical
-                                        proficiency of our members as well as to have fun while learning exciting new
+                                        proficiency of our members, and to have fun while learning new exciting
                                         technologies.</p>
                                 </article>
                             </div>
