added new image

--- a/src/index.html
+++ b/src/index.html
@@ -125,10 +125,13 @@
                                         Everyone is encouraged to attend. DevFests are usually one or two days long.</p>
                                     <div id="slider">
                                         <figure class="image is-4by3">
-                                            <img src="./assets/media/dev17.jpg">
+                                            <img src="./assets/media/dev17.jpg" alt="Photo of DevFest 2018 in March">
                                         </figure>
                                         <figure class="image is-4by3 is-hidden">
-                                            <img src="./assets/media/anight.jpg">
+                                            <img src="./assets/media/anight.jpg" alt="Photo of Android Night 2018">
+                                        </figure>
+                                        <figure class="image is-4by3 is-hidden">
+                                            <img src="./assets/media/_DSC3993.jpg" alt="Photo of DevFest 2018 in November">
                                         </figure>
                                     </div>
                                 </article>
