fix for formspree missing referrer

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
     <meta name="theme-color" content="#536DFE">
     <meta name='HandheldFriendly' content='True'>
 
+    <meta name="referrer" content="origin">
+
     <meta itemprop="name" content="GDG Glasgow">
     <meta itemprop="description"
           content="GDG Glasgow is a group of developers aiming to manipulate technological advancements under Google's technological guidance. We do this in the form of events that encourage everyone to participate as well as being open and having a nurturing environment. Our goal is to organize space to connect the best industry experts with the city of Glasgow.">
