disabled meetup api/events stuff since they unfortunately removed public api keys

--- a/src/index.html
+++ b/src/index.html
@@ -153,31 +153,31 @@
         </div>
     </section>
 
-    <section id="events" class="hero is-dark">
-        <div class="hero-body">
-            <div class="container">
-                <h2 class="title has-text-centered-mobile">Calendar of Events <i class="far fa-calendar-alt"></i></h2>
-                <div class="tile is-ancestor">
-                    <div class="tile is-vertical is-12">
-                        <div class="tile">
-                            <div class="tile is-parent is-vertical">
-                                <article class="tile is-child notification is-info has-background-link">
-                                    <h3 class="title has-text-centered-mobile">Past</h3>
-                                    <div id="past-list"></div>
-                                </article>
-                            </div>
-                            <div class="tile is-parent">
-                                <article class="tile is-child notification has-background-link">
-                                    <h3 class="title has-text-centered-mobile">Upcoming</h3>
-                                    <div id="upcoming-list"></div>
-                                </article>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+<!--    <section id="events" class="hero is-dark">-->
+<!--        <div class="hero-body">-->
+<!--            <div class="container">-->
+<!--                <h2 class="title has-text-centered-mobile">Calendar of Events <i class="far fa-calendar-alt"></i></h2>-->
+<!--                <div class="tile is-ancestor">-->
+<!--                    <div class="tile is-vertical is-12">-->
+<!--                        <div class="tile">-->
+<!--                            <div class="tile is-parent is-vertical">-->
+<!--                                <article class="tile is-child notification is-info has-background-link">-->
+<!--                                    <h3 class="title has-text-centered-mobile">Past</h3>-->
+<!--                                    <div id="past-list"></div>-->
+<!--                                </article>-->
+<!--                            </div>-->
+<!--                            <div class="tile is-parent">-->
+<!--                                <article class="tile is-child notification has-background-link">-->
+<!--                                    <h3 class="title has-text-centered-mobile">Upcoming</h3>-->
+<!--                                    <div id="upcoming-list"></div>-->
+<!--                                </article>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </section>-->
 
     <div class="modal" id="contact-form-modal">
         <div class="modal-background"></div>
